fixed layout issues

--- a/styles.css
+++ b/styles.css
@@ -497,7 +497,7 @@ Styles
 .arrow {
   position: relative;
   font-size: 5rem;
-  margin: 0 auto;
+  text-align: center;
   color: var(--primary-color);
   animation-name:pointing;
   animation-duration: 2s;
@@ -606,10 +606,10 @@ Media Queries
       margin: 0 auto;}
       
     .js-plotly-plot .plotly .main-svg {
-      left:-33%;
+      left:-35%;
     }
     .js-plotly-plot{
-      transform: scale(0.69);
+      transform: scale(0.65);
     }
     .learn {
       font-size: 10px ;
@@ -659,6 +659,7 @@ Media Queries
     }
     #col2 p {
       top: 0px;
+      font-size: 1rem;
       margin: 0 0 1px;
     }
     
